added accessability to footer and header

--- a/contacts.html
+++ b/contacts.html
@@ -295,34 +295,42 @@
               </div>
               <div class="social">
                 <ul class="social__list list-reset flex">
-                  <li class="social__item"><a class="icon" href="#">
-                      <svg width="50" height="50" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <li class="social__item"><a class="icon" href="#" aria-label="Instagram page">
+                    <svg width="50" height="50" viewBox="0 0 50 50" fill="none"
+                        xmlns="http://www.w3.org/2000/svg">
                         <path
-                          d="M35.4167 4.1665H14.5834C8.83045 4.1665 4.16675 8.8302 4.16675 14.5832V35.4165C4.16675 41.1695 8.83045 45.8332 14.5834 45.8332H35.4167C41.1697 45.8332 45.8334 41.1695 45.8334 35.4165V14.5832C45.8334 8.8302 41.1697 4.1665 35.4167 4.1665Z"
-                          stroke="#A73131" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                            d="M35.4167 4.1665H14.5834C8.83045 4.1665 4.16675 8.8302 4.16675 14.5832V35.4165C4.16675 41.1695 8.83045 45.8332 14.5834 45.8332H35.4167C41.1697 45.8332 45.8334 41.1695 45.8334 35.4165V14.5832C45.8334 8.8302 41.1697 4.1665 35.4167 4.1665Z"
+                            stroke="#A73131" stroke-width="2" stroke-linecap="round"
+                            stroke-linejoin="round" />
                         <path
-                          d="M33.3334 23.6876C33.5905 25.4215 33.2943 27.1923 32.487 28.7481C31.6797 30.3039 30.4024 31.5656 28.8368 32.3536C27.2711 33.1417 25.4968 33.416 23.7663 33.1375C22.0357 32.859 20.437 32.042 19.1976 30.8026C17.9582 29.5631 17.1411 27.9645 16.8627 26.2339C16.5842 24.5034 16.8585 22.7291 17.6466 21.1634C18.4346 19.5978 19.6963 18.3204 21.2521 17.5131C22.8079 16.7059 24.5787 16.4097 26.3125 16.6668C28.0811 16.9291 29.7185 17.7532 30.9827 19.0174C32.247 20.2817 33.0711 21.9191 33.3334 23.6876Z"
-                          stroke="#A73131" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                        <path d="M36.4584 13.5415H36.4792" stroke="#A73131" stroke-width="2" stroke-linecap="round"
-                          stroke-linejoin="round" />
-                      </svg>
-                    </a></li>
-                  <li class="social__item"><a class="icon" href="#">
-                      <svg width="50" height="50" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            d="M33.3334 23.6876C33.5905 25.4215 33.2943 27.1923 32.487 28.7481C31.6797 30.3039 30.4024 31.5656 28.8368 32.3536C27.2711 33.1417 25.4968 33.416 23.7663 33.1375C22.0357 32.859 20.437 32.042 19.1976 30.8026C17.9582 29.5631 17.1411 27.9645 16.8627 26.2339C16.5842 24.5034 16.8585 22.7291 17.6466 21.1634C18.4346 19.5978 19.6963 18.3204 21.2521 17.5131C22.8079 16.7059 24.5787 16.4097 26.3125 16.6668C28.0811 16.9291 29.7185 17.7532 30.9827 19.0174C32.247 20.2817 33.0711 21.9191 33.3334 23.6876Z"
+                            stroke="#A73131" stroke-width="2" stroke-linecap="round"
+                            stroke-linejoin="round" />
+                        <path d="M36.4584 13.5415H36.4792" stroke="#A73131" stroke-width="2"
+                            stroke-linecap="round" stroke-linejoin="round" />
+                    </svg>
+                </a></li>
+            <li class="social__item"><a class="icon" href="#" aria-label="Facebook page">
+                    <svg width="50" height="50" viewBox="0 0 50 50" fill="none"
+                        xmlns="http://www.w3.org/2000/svg">
                         <path
-                          d="M37.4999 4.1665H31.2499C28.4872 4.1665 25.8377 5.26397 23.8842 7.21748C21.9307 9.17098 20.8333 11.8205 20.8333 14.5832V20.8332H14.5833V29.1665H20.8333V45.8332H29.1666V29.1665H35.4166L37.4999 20.8332H29.1666V14.5832C29.1666 14.0306 29.3861 13.5007 29.7768 13.11C30.1675 12.7193 30.6974 12.4998 31.2499 12.4998H37.4999V4.1665Z"
-                          stroke="#A73131" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                      </svg>
-                    </a></li>
-                  <li class="social__item"><a class="icon" href="#">
-                      <svg width="50" height="50" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            d="M37.4999 4.1665H31.2499C28.4872 4.1665 25.8377 5.26397 23.8842 7.21748C21.9307 9.17098 20.8333 11.8205 20.8333 14.5832V20.8332H14.5833V29.1665H20.8333V45.8332H29.1666V29.1665H35.4166L37.4999 20.8332H29.1666V14.5832C29.1666 14.0306 29.3861 13.5007 29.7768 13.11C30.1675 12.7193 30.6974 12.4998 31.2499 12.4998H37.4999V4.1665Z"
+                            stroke="#A73131" stroke-width="2" stroke-linecap="round"
+                            stroke-linejoin="round" />
+                    </svg>
+                </a></li>
+            <li class="social__item"><a class="icon" href="#" aria-label="Youtube page">
+                    <svg width="50" height="50" viewBox="0 0 50 50" fill="none"
+                        xmlns="http://www.w3.org/2000/svg">
                         <path
-                          d="M46.9582 13.3752C46.7107 12.3864 46.2067 11.4805 45.4971 10.7489C44.7874 10.0173 43.8973 9.48596 42.9166 9.2085C39.3332 8.3335 24.9999 8.3335 24.9999 8.3335C24.9999 8.3335 10.6666 8.3335 7.08322 9.29183C6.10249 9.5693 5.21234 10.1007 4.50269 10.8323C3.79305 11.5639 3.28903 12.4698 3.04156 13.4585C2.38575 17.0951 2.06496 20.7841 2.08322 24.4793C2.05985 28.2023 2.38065 31.9195 3.04156 35.5835C3.31439 36.5415 3.82969 37.413 4.53769 38.1137C5.24568 38.8144 6.12243 39.3206 7.08322 39.5835C10.6666 40.5418 24.9999 40.5418 24.9999 40.5418C24.9999 40.5418 39.3332 40.5418 42.9166 39.5835C43.8973 39.306 44.7874 38.7747 45.4971 38.0431C46.2067 37.3115 46.7107 36.4056 46.9582 35.4168C47.609 31.8076 47.9297 28.1467 47.9166 24.4793C47.9399 20.7563 47.6191 17.0391 46.9582 13.3752Z"
-                          stroke="#A73131" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                        <path d="M20.3125 31.2915L32.2917 24.479L20.3125 17.6665V31.2915Z" stroke="#A73131" stroke-width="2"
-                          stroke-linecap="round" stroke-linejoin="round" />
-                      </svg>
-                    </a></li>
+                            d="M46.9582 13.3752C46.7107 12.3864 46.2067 11.4805 45.4971 10.7489C44.7874 10.0173 43.8973 9.48596 42.9166 9.2085C39.3332 8.3335 24.9999 8.3335 24.9999 8.3335C24.9999 8.3335 10.6666 8.3335 7.08322 9.29183C6.10249 9.5693 5.21234 10.1007 4.50269 10.8323C3.79305 11.5639 3.28903 12.4698 3.04156 13.4585C2.38575 17.0951 2.06496 20.7841 2.08322 24.4793C2.05985 28.2023 2.38065 31.9195 3.04156 35.5835C3.31439 36.5415 3.82969 37.413 4.53769 38.1137C5.24568 38.8144 6.12243 39.3206 7.08322 39.5835C10.6666 40.5418 24.9999 40.5418 24.9999 40.5418C24.9999 40.5418 39.3332 40.5418 42.9166 39.5835C43.8973 39.306 44.7874 38.7747 45.4971 38.0431C46.2067 37.3115 46.7107 36.4056 46.9582 35.4168C47.609 31.8076 47.9297 28.1467 47.9166 24.4793C47.9399 20.7563 47.6191 17.0391 46.9582 13.3752Z"
+                            stroke="#A73131" stroke-width="2" stroke-linecap="round"
+                            stroke-linejoin="round" />
+                        <path d="M20.3125 31.2915L32.2917 24.479L20.3125 17.6665V31.2915Z"
+                            stroke="#A73131" stroke-width="2" stroke-linecap="round"
+                            stroke-linejoin="round" />
+                    </svg>
+                </a></li>
                 </ul>
               </div>
             </div>
